# rd-studio-be

./: Procfile  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml  requirements.txt
.git copy/: config  index  packed-refs
.git copy/objects/pack/: pack-3d9bd22dda905d8db47366b5cc93a03704eec5a9.idx  pack-3d9bd22dda905d8db47366b5cc93a03704eec5a9.pack  pack-3d9bd22dda905d8db47366b5cc93a03704eec5a9.rev
.github/workflows/: deploy.yml
base/: models.py  urls.py
base/migrations/: 0001_initial.py  0002_alter_medialibraryitem_options_and_more.py  0002_medialibraryitem_page_type.py  0003_alter_user_role.py  0003_usersociallinks.py  0004_user_studio_name.py  0004_usersociallinks_remaing_credit_and_more.py  0005_remove_usersociallinks_remaing_credit_and_more.py  0005_rename_studio_name_user_organization_name_and_more.py  0006_alter_user_gender.py  0006_rename_remaing_credit_user_remaining_credit.py  0007_alter_user_gender_alter_user_role_and_more.py  0007_medialibrary_instagram_profile_url_and_more.py  0008_remove_userpaymenttransaction_transaction_date_and_more.py
base/migrations_local/: 0001_initial.py  0002_medialibrary_alter_user_role_medialibraryitem_and_more.py  0003_alter_medialibrary_media_type_alter_user_role_and_more.py  0004_auto_20251005_0727.py  0005_auto_20251005_0729.py  0006_auto_20251005_0731.py  0007_alter_user_managers_and_more.py  0008_alter_medialibrary_user_functionality.py  0009_medialibrary_media_unique_id.py
base/utils/: __init__.py  permissions.py  s3_utils.py
rd_studio_backend/: asgi.py  settings.py  urls.py  view.py  wsgi.py
(+11 files in other folders)
